# Eduthon-flutter

./: BUILD_OPTIMIZATION_TIPS.md  CODE_CHANGES_DETAILED.md  COMPLETE_FIX_SUMMARY.md  DOCUMENTATION_FILES_GUIDE.md  DOCUMENTATION_INDEX.md  LLM_NATIVE_LIBRARY_FIX_SUMMARY.md  LOG_REFERENCE_GUIDE.md  ML_INTEGRATION_README.md  ML_MODEL_INTEGRATION_SUMMARY.md  NATIVE_LIBRARY_FIX.md  PDF_USAGE_GUIDE.md  PROBLEM_AND_SOLUTION.md  QUICK_FIX_CHECKLIST.md  README.md  README_LLAMA.md  README_NATIVE_LIB_FIX.md  README_SOLUTION.md  REBUILD_INSTRUCTIONS.md  SOLUTION_SUMMARY.md  TEXT_WORD_JOINER_SOLUTION.md  debug_regex.dart  download_model.html  download_model.ps1  output.txt  pubspec.yaml  test_word_joiner.dart
.dart_tool/: package_config.json  package_config_subset
.dart_tool/dartpad/: web_plugin_registrant.dart
.dart_tool/flutter_build/: dart_plugin_registrant.dart
android/: build.gradle.kts  gradle.properties
android/app/: CMakeLists.txt  build.gradle.kts  google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  llama_wrapper.cpp
android/app/src/main/kotlin/com/example/claudetest/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/config/: firebase_config.dart
lib/models/: models.dart  rag_models.dart
lib/providers/: auth_provider.dart
lib/screens/: home_screen.dart  login_screen.dart  register_screen.dart  role_select_screen.dart  splash_screen.dart
lib/services/: TEXT_WORD_JOINER_README.md  aws_s3_service.dart  bluetooth_mesh_service.dart  connection_manager.dart  content_structure_service.dart  download_manager.dart  enhanced_quiz_generator.dart  explanation_parser.dart  groq_service.dart  knowledge_indexer.dart  library_service.dart  llm_summary_service.dart  mind_map_generator.dart  ml_quiz_service.dart  model_downloader.dart  offline_db.dart  offline_rag_service.dart  onboarding_service.dart  rag_service.dart  (+12 more)
linux/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+63 files in other folders)
